--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ install:
   - pip install flake8
 before_script: 
   - python manage.py migrate
-script:
-  - black .
-  - flake8 --max-line-length=92
-after_script:
-  - coveralls
+# script:
+#   - black .
+#   - flake8 --max-line-length=92
+# after_script:
+#   - coveralls
